# chronobot

./: .envrc  .gitignore  Cargo.toml  flake-module.nix  flake.nix
.direnv/: flake-profile-5-link
docs/: crates.js  help.html  settings.html  src-files.js
docs/chronobot/: all.html  constant.REQUIRED_ENV_VARS.html  fn.main.html  fn.test.html  index.html  sidebar-items.js
docs/chronobot/bot/: index.html  sidebar-items.js  struct.BotState.html  struct.BotStateRaw.html  struct.CommandContext.html  struct.CommandSet.html  type.Command.html  type.CommandFuture.html  type.CommandPrefix.html
docs/chronobot/chrono/: fn.roll.html  index.html  sidebar-items.js
docs/chronobot/cli/: index.html  struct.Cli.html
docs/chronobot/env/: fn.load.html  fn.read.html  fn.write.html  index.html  (+2 more)
docs/search.index/: 025f2dfa1b03.js  039630328753.js  044cf1785f0d.js  0499996c225b.js  04c6934f4c91.js  08f34d935ca4.js  0ae59c456920.js  0b2655efb157.js  0bca26f4a7ac.js  0d9323a77988.js  0ec7eef774f7.js  0f43e56d485b.js  0f7f17926327.js  108cb841b781.js  1260159d28ab.js  12725f32ced7.js  138de99e0732.js  1487796ef7bb.js  151880586368.js  15eca24bb2a0.js  18494a94ef7c.js  1b394e467ecc.js  1b4a74880fe0.js  1cf900be02ea.js  1e82d987e044.js  26d84764debe.js  2af49e03fb41.js  2c73aa9538d5.js  2f7e261bf36d.js  2f84cb0d2ba4.js  301a774605ac.js  30d6f9d0d4f9.js  3320a7825d66.js  3937eeb4bb63.js  3991dec0463c.js  39e09b195e67.js  39e39778808f.js  3c73c188cc2e.js  40563f580a48.js  405d5d913040.js  (+39 more)
src/: bot.rs  cli.rs  env.rs  log.rs  main.rs
src/chrono/: dice.rs  mod.rs
tables/csv/: dice.csv
(+106 files in other folders)
